[package]
name = "wealthsimple-prometheus"
version = "0.1.0"
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.2", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rpassword = "4.0"
rprompt = "1.0"
uuid = { version = "0.8", features = ["v4"] }
prometheus = "0.8"
lazy_static = "1.4"
tiny_http = "0.6"
